# rust-example-todo01

./: Cargo.toml  PKGBUILD  README.md  REQUIREMENTS.md
.github/workflows/: release.yml
data/: my_todos.yaml
src/: cli.rs  lib.rs  main.rs  storage.rs  todo.rs
tests/: storage_integration.rs
