[package]
name = "ven-todo"
version = "0.1.0"
edition = "2024"
description = "A CLI todo app with YAML storage"
authors = ["Ven <0ventox0@gmail.com>"]
license = "GPL 3.0"
repository = "https://github.com/VenRoot/rust-example-todo01"
keywords = ["todo", "cli", "productivity"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.98"
clap = {version = "4.5.40", features = ["derive"]}
serde = { version = "1.0.219", features = ["derive"]}
serde_yaml = "0.9.34"

[dev-dependencies]
tempfile = "3"